--- a/folded_balun/folded_balun.tex
+++ b/folded_balun/folded_balun.tex
@@ -20,7 +20,7 @@ This document has been written as my attempt to understand the operation of a Fo
 
 \begin{figure}[h]
 
-\caption{Dipole with coax feedline and stub}
+\caption{Dipole with coax feedline and stub.  Only the shield of the stub is connected.}
 \label{fig:assembly}
 \vspace{5mm}
 \centering
@@ -42,19 +42,23 @@ This document has been written as my attempt to understand the operation of a Fo
 \draw (2.5,3) -- (2.5,3.5);
 \draw (2.5,-0.75) -- (3,-0.75);
 
+% unused stub centre
+\draw (2,3) -- (2,3.35);
+\draw (2,-0.9) -- (2,-1.2);
+
 \node[] at (3.75,4) {Feedpoint};
 
 \end{tikzpicture}
 \end{figure}
 
-Consider a dipole driven by a coax feedline.  The purpose of the balun is to remove any current on the coax shield outer, so the currents in each dipole arm are balanced.
+Consider a dipole driven by a coax feedline.  The purpose of the balun is to remove any current on the coax shield outer, to ensure the currents in each dipole arm are balanced.
 
 The balun is formed by the addition of a quarter wave stub to an existing coax feedline and dipole assembly.  The stub should be constructed from the same coax as the feedline, so that it's RF properties are similar.  The balun is formed by the interaction of the stub with the existing coax feedline and dipole.
 
-Only the shield of the stub is used.  The inner of the coax feedline is connected to the stub at the feedpoint, and the stub is connected to the feedline coax outer a quarter wavelength from the feedpoint.
+Only the shield of the stub is used.  The inner of the coax feedline is connected to the stub at the feedpoint, and the stub is connected to the feedline coax shield a quarter wavelength from the feedpoint.
 
 \begin{figure}[h]
-\caption{Dipole in parallel with shorted transmission line}
+\caption{Dipole in parallel with shorted twin-wire transmission line formed by the coax and stub shield.}
 \label{fig:shorted}
 \vspace{5mm}
 \centering
@@ -78,7 +82,7 @@ Only the shield of the stub is used.  The inner of the coax feedline is connecte
 \end{tikzpicture}
 \end{figure}
 
-Consider just the coax shield outer and the stub in Figure \ref{fig:shorted}.  We can see two similar conductors with a constant separation, shorted at one end.  It can be viewed a twin wire transmission line, one quarter wavelength long, connected across the feedpoint.  The short is transformed to a high impedance across the feedpoint. Thus the addition of the stub has no affect on the dipole operation.
+Consider just the coax shield outer and the stub in Figure \ref{fig:shorted}.  We can see two similar conductors with a constant separation, shorted at one end.  It can be viewed a twin wire transmission line, one quarter wavelength long, connected across the feedpoint.  The short is transformed to a high impedance across the feedpoint. Thus the addition of the stub has no affect on the dipole operation when fed by balanced currents.
 
 \begin{figure}[h]
 \caption{Folded balun currents.  The impedance $Z$ of the coax shield outer and stub are similar, so the currents $I_{outer}$ and $I_{stub}$ are the same magnitude but opposite sign.}
@@ -112,7 +116,7 @@ Consider just the coax shield outer and the stub in Figure \ref{fig:shorted}.  W
 \end{tikzpicture}
 \end{figure}
 
-In practice some of the differential, balanced current flowing inside the coax feedline is converted to common mode current.  Consider current on the coax shield inner $I$ at the feedpoint.  It will be split between the desired dipole arm and the coax shield outer. The amount of current flowing down the coax shield outer $I_{outer}$ depends on the impedance $Z$ of this path.
+In practice some of the differential, balanced current flowing inside the coax feedline is converted to common mode current.  Consider current on the coax shield inner $I$ at the feedpoint (Figure \ref{fig:currents}).  It will be split between the desired dipole arm and the coax shield outer. The amount of current flowing down the coax shield outer $I_{outer}$ depends on the impedance $Z$ of this path.
 
 The current flowing in the coax inner $-I$ is equal in magnitude but opposite it direction to the current on the coax shield inner.  This current will be split in the same way, the desired current along the dipole arm, and the undesired component $I_{stub}$ down the stub.  Because the stub is made of the same material as the feedline, and is located at approximately the same position, $Z$ will be the same, and the current flowing will be the same magnitude but opposite sign $I_{stub}=-I_{outer}$.  
 
@@ -120,9 +124,9 @@ These currents cancel at the point where the stub connects to the coax shield, r
 
 Now the coax shield outer and stub are carrying common mode RF currents and are a significant fraction of a wavelength. However the stub and coax shield outer currents are equal and opposite, the conductors are close together, so the far field radiation is cancelled.  In other words, they form a transmission line.  A transmission line, by definition, does not radiate RF power. This means that no RF power is radiated from the common mode currents on the coax shield outer or stub, and hence all RF power must be radiated by the dipole.
 
-In short, the stub draws a current from the coax inner that cancels the current flowing down the coax outer \cite{antenna_theory}.
+In short, the stub draws a current from the coax inner that cancels the current flowing down the outside of the coax shield \cite{antenna_theory}.
 
-Owen Duffey \cite{duffey} has simulated this balun with assymetric loads (e.g. offset fed dipoles, or a real-world HF antenna near the ground) and has concluded it is only useful for highly symmetric loads (e.g a UHF dipole).  This is consistent with the explanation above, as it's operation depends on the currents in both dipole arms being equal and opposite.
+Owen Duffey \cite{duffey} has simulated this balun with asymmetric loads (e.g. offset fed dipoles, or a real-world HF antenna with random objects in the near field) and has concluded it is only useful for highly symmetric loads (e.g. a UHF dipole, where the short wavelength makes it easy to have no objects in the near field).  This is consistent with the explanation above, as it's operation depends on the currents in both dipole arms being equal and opposite.
 
 \bibliographystyle{plain}
 \bibliography{folded_balun_refs}
