--- a/freedv_low/freedv_low.tex
+++ b/freedv_low/freedv_low.tex
@@ -6,6 +6,7 @@
 \usepackage{tkz-euclide}
 \usepackage[numbib]{tocbibind}
 \usepackage{hyperref}
+\usepackage{float}
 \begin{document}
 
 \title{Low SNR FreeDV Mode}
@@ -248,6 +249,7 @@ B = \frac{R_sN_s}{(N_s-1)(1-T_{cp}/T_s)}
 where $R_s$ is the total symbol rate over the channel.  For example for 700D, $B = 700(8)/((8-1)(1-0.002/0.02))=888.89$ Hz.  In practice 700D has some extra bits allocated for frame synchronisation and auxiliary text, resulting in $B=944$ Hz.
 
 \subsection{Latency}
+\label{sec:latency}
 
 Latency is delay experienced by end users when using a speech processing system such as FreeDV. Latency is an important trade off for real time, Push To Talk (PTT) speech communication. Speech compression and FEC tend to work better with latency, but subjective quality tends to decrease whenever there is delay in conversational speech.
 
@@ -452,7 +454,7 @@ where $\overline{H(e^{j \omega_c})}$ is the smoothed estimate of the channel at 
 
 This algorithm is denoted \emph{lin2ls}.  It's BER performance is plotted in Figure \ref{fig:equaliser_curves} and three resamplers summarised in Table \ref{tab:resampler_summary}.
 
-\begin{figure}[h]
+\begin{figure}[H]
 \caption{Uncoded BER performance curves for equaliser algorithms over various channels. \emph{mean12} is the algorithm used for 700D, and \emph{lin2} for 700E.  Note \emph{mean12} (blue) is very close to theory for AWGN but breaks down on MPP.  The \emph{lin2ls} algorithm performs quite well on MPP and MPD, and about 0.5dB poorer than \emph{mean12} on AWGN.}
 \label{fig:equaliser_curves}
 \begin{center}
@@ -489,55 +491,69 @@ The algorithm used to combine adjacent carriers (\ref{eq:combine_freq}) is new a
 
 \subsection{Multipath}
 
-Maintaining a viable digital voice link on multipath channels is challenging, as there are periods when the SNR of a packet is very low across all carriers. For HF data we can use long FEC codewords to ride over the fades but latency concerns make this difficult for PTT speech.
+The multipath channel exhibits frequency selective fading.  Spreading bits in a packet across multiple carriers with OFDM helps.  Extending this is frequency diversity, where $n$ copies of the entire OFDM signal signal are transmitted, then recombined at the receiver.  Due to the spectral efficiency of OFDM, it is possible to transmit several copies of a narrow band digital voice waveform within a 2000 Hz bandwidth.
 
-\begin{figure}[h]
+Figure \ref{fig:spectrogram} illustrates an example of $n=2$ diversity over a multipath channel, using a $Nc=8$ carrier waveform waveform similar to 700D.  The original transmit signal has been copied to higher frequencies to produce $Nc=16$ carrier signal of the same total power but with twice the bandwidth.
+
+Frequency diversity helps, as there are times when one carrier is faded, but it's diversity copy at about 800 Hz offset is not faded.  Then when recombined we can recover that carrier.  However observing Figure \ref{fig:spectrogram} there are some periods where the entire channel at all frequencies is faded for up to 1 second. This is supported by \ref{fig:ber_packet} which shows large burst of errors during fades. This leads us to the idea of diversity in time, where the bits of packet are spread over a period longer than the duration of a fade, lowering the bit error rate of that packet. One the BER is reduced beneath a threshold, the FEC code can all errors in the packet, and we can recover intelligible speech. The trade off is latency, which makes fast turn around PTT speech difficult.
+
+\begin{figure}[H]
 \caption{Spectrogram of 15 seconds of $n=2$ diversity signal over a MPP channel. At some points in time the signal is faded at all frequencies, so frequency diversity cannot help.}
 \label{fig:spectrogram}
 \begin{center}
 \input spectrogram.tex
 \end{center}
 \end{figure}
-\begin{figure}[h]
 
-\caption{BER/packet for 0.16s packets, same channel as Figure \ref{fig:spectrogram}.  Larger packets allow us to spread the errors over time, beneath a BER threshold where they can be corrected by FEC.}
+\begin{figure}[H]
+\caption{BER/packet for 0.16s packets, same channel as Figure \ref{fig:spectrogram}.  Larger packets (diversity in time) allow us to spread the errors over time, beneath a BER threshold where they can be corrected by FEC.}
 \label{fig:ber_packet}
 \begin{center}
 \input ber_packet.tex
 \end{center}
 \end{figure}
 
-TODO: spectrogram figure, discuss why time domain diversity is required.
-TODO: BER per packet figure, I think this is instructive, explain swhy smoothing out errors in time will help.
-TODO: smaller BER/PER plot so they don't all end up one per page?
+Figures \ref{fig:div_ber_curves} and \ref{fig:div_per_curves} show the results of frequency and time domain ($D=1.6$ and $D=3.2$ second packet) diversity on BER and PER.  The simulations were run for 300 seconds, which should give reasonable results down to a BER of $10^{-2}$ \cite{itu1487}. Care needs to be taken with HF simulation models such as \cite{itu1487} that have fixed delay, as it is possible for the resulting notches in the spectrum to be the same separation as a diversity carrier pair - a situation unlikely in a real world channel.
 
-This section WIP, currently in note form. For the $n=2$ diversity simulation (Figure \ref{fig:div_ber_curves}), the signal was split into 2 copies, with half the power going to each copy.  The 2nd copy was shifted 1000 Hz higher in frequency.
+Maximum Ratio Combining (MRC) is used for recombination, simulations indicate this was about 0.5dB better than Equal Gain Combining (EGC). As per Section \ref{sec:latency} an algorithmic delay of $D$ seconds implies a perceived latency of $2D$ seconds, so with $D=3.2$, the user would experience a 6.4 second latency, making PTT speech impossible.  Such latencies may be useful for an emergency voice mode of last resort. Smaller $D$ algorithmic delays can also be used, and will still have some benefit.
 
+The waveform simulated is comparable to 700D, the \emph{mean12} curve is the expected performance form FreeDV 700D.  The combination of frequency and time domain interleaving gives impressive gains in PER performance, up to a total of 5dB with $D=3.2$, and 2.5dB with $n=2$ frequency diversity alone.  It is conceivable that with a more realistic $D<1$ second and frequency diversity, a 3dB improvement over 700D should be possible.
+
+Figure \ref{fig:snr_per_curves} shows the PER results of the C implementation of 700D, compared to the Octave simulations of the proposed waveforms, expressed on a SNR x axis.  It should be noted that the C implementation also includes timing and frequency offset estimation which are non ideal and will have small losses.  The proposed waveforms have been adjusted to include the same $L_p$, $L_{cp}$ and a 1dB loss for PAPR compression, to make the comparison with 700D realistic.
+
+\begin{table}[h]
+\centering
+\begin{tabular}{l c c c c }
+ \hline
+ Waveform & Freq Div $n$ & Alg Dly $D$ (s) & Thresh SNR (dB) & $\Delta$ 700D (dB) \\
+ \hline
+ 700D C impl & 1 & 0.16 & 5.8 & 0.0 \\ 
+ lin2s  & 1 & 0.16 & 5.2 & 0.6 \\
+ div2 MRC & 2 & 0.16 & 3.2 & 2.6 \\ 
+ div2 MRC 1.8s & 2 & 1.60 & 1.8 & 4.0 \\ 
+ div2 MRC 3.6s & 2 & 3.20 & 1.0 & 4.8 \\ 
+ \hline
+\end{tabular}
+\caption{Threshold SNR of proposed multipath waveforms on MPP Channel}
+\end{table}
+
+Additional notes:
 \begin{enumerate}
-\item We are talking about fast fading here - no much we can do about slow because latency
-\item Maximum Ratio Combining (MRC) seems to get us about 0.5dB over Equal Gain Combining (EGC).
-\item The curves represent the average BER across the entire simulation.  In practice we are limited by the ability of the FEC to correct errors in a single FEC codeword which is limited by latency to a few 100 ms. So we need a way to test the PER and compare to existing waveforms to see if we have any gain.  Perhaps simulate all carriers or even include LDPC code.
-\item Does $n=4$ diversity give us any gains?  We would need a lower code rate for that.
-\item Current simulation is single carrier so a bit weak, might be best to test with multiple carriers.
-\item Key question is independence of channel $H(e^{j\omega_c})$ at 1 kHz (ish) separation of narrow band carriers.  This is actually difficult to simulate as with our model $H(e^{j\omega_c})$ is periodic.
-\item $n=2$ diversity might also cause PAPR problems as twice as many carriers, we should simulate this, and establish overall performance.
-\item initial PER curves (all carriers) based on 10\% per packet threshold show a 2dB gain over no diversity.  6dB off AWGN. Gain is greater at higher Eb/No - is it possible to shift our operating point there, e.g. lower code rate?  Goal is lower SNR I guess, we need  model to investigate.
-\item Clear from spectrogram that $H(e^{j\omega_c})$ are indeed correlated - it's quite common to have the entire channel fall over at all frequencies.  This limits the benefits from frequency diversity.  This suggest we need to try time diversity (however we need a way to deal with latency).
-\item First pass long latency (10 modem frame) PER results are very impressive, around 6dB over mean12 (700D).  Rule I guess is interleaver twice the length of fading period so this makes sense.  Losing 2 seconds of speech would have a significant cost.  How could we architect this for minimum latency (2 and a bit seconds), e.g. buffering just one modem frame?  How to make usable for PTT as well?
-\item Good to include actual FEC code at some point, to test FEC simulation (just measuring BER for the packet).
-\item TODO: simulate low rate code.  This makes sense giving $H_c$ are correlated, ie entire channel is often quite down.
+\item The $n=2$ diversity waveforms may suffer an additional PAPR loss due to the large number of carriers. PAPR compression with these waveforms should be simulated.
+\item The longer $D$ waveforms allow the use of longer FEC codes which will provide an additional boost to SNR performance.
+\item An alternative to frequency domain diversity is a low rate FEC code applied across a large number of carriers spanning a wide bandwidth.  This has not been simulated to date.  An advantage of the diversity approach is we can selectively decode just one of the diversity copies - this can be used to decode speech in high SNR, but crowed band conditions where one of the diversity copies is impacted by strong co-channel interference. 
+\item Diversity works well when the symbols being combined are uncorrelated.  Another approach would be to send a low $D$ waveform on one diversity channel, and a high $D$ copy on another.  For high SNR channels the benefits of low $D$ PTT speech could be enjoyed.  For poor channels, the high latency copy can be combined for improved performance at the expense of longer latency.
 \end{enumerate}
 
-
-\begin{figure}[h]
-\caption{$n=2$ diversity simulation BER results. The 1.8 and 3.6 second curves simulate long delay $D$ (long FEC codewords). Note there is no effect on BER with large codewords as these curves are the average BER over the entire simulation, they do not model the non-uniform distribution of errors on multipath channels.}
+\begin{figure}[H]
+\caption{$n=2$ diversity simulation BER results. The 1.6 and 3.2 second curves simulate long delay $D$ (long FEC codewords). Note there is no effect on BER with large codewords as these curves are the average BER over the entire simulation, they do not model the non-uniform distribution of errors on multipath channels.}
 \label{fig:div_ber_curves}
 \begin{center}
 \input equaliser_div_ber.tex
 \end{center}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[H]
 \caption{$n=2$ diversity simulation PER results. A packet error is declared if the BER inside the packet exceeds 0.1 (approximating the performance of a rate 0.5 LDPC code). The packet length is 0.16s unless indicated in the legend. This metric better represents the effects of a non-uniform distribution of errors.}
 \label{fig:div_per_curves}
 \begin{center}
@@ -545,7 +561,7 @@ This section WIP, currently in note form. For the $n=2$ diversity simulation (Fi
 \end{center}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[H]
 \caption{$n=2$ diversity simulation PER results, mapped to a SNR axis and compared to 700D. 700E (not shown) is about 2dB worse than 700D on the MPP channel. The red oval is where a voice link becomes possible.}
 \label{fig:snr_per_curves}
 \begin{center}
