proof read and edits

--- a/freedv_low/equaliser_div_per.tex
+++ b/freedv_low/equaliser_div_per.tex
@@ -24,5 +24,5 @@
 \fontsize{6}{0}\selectfont\put(243.755,277.01){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{MPP div2 MRC}}}}
 \fontsize{6}{0}\selectfont\put(243.755,266.012){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{MPP div2 MRC 1.6s}}}}
 \fontsize{6}{0}\selectfont\put(243.755,255.014){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{MPP div2 MRC 3.2s}}}}
-\fontsize{6}{0}\selectfont\put(243.755,244.453){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{link clcoses}}}}
+\fontsize{6}{0}\selectfont\put(243.755,244.453){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{link closes}}}}
 \end{picture}
